# content-matching-ventureX2026

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  TEAM_TASKS.md  app.py  docker-compose.yml  generate_roi.py  requirements.txt  schema.md  test.txt
backend/: config.py  explanation.py  ingest.py  llm.py  main.py  models.py  pyproject.toml  requirements.txt  retrieval.py  scoring.py  test_retrieval.py  test_scoring.py  tools.py
backend/api/: routes.py
backend/chroma_db/: chroma.sqlite3
backend/layer1_retrieval/: retrieval.py
backend/layer2_scoring/: scoring.py
backend/layer3_explanation/: explanation.py
data/: directors_mockup.json
data/mockup/: director_profiles.json
data/schema/: candidate_schema.json
dataset/: 01_users.csv  02_company_profiles.csv  03_director_profiles.csv  04_kol_profiles.csv  05_kol_social_metrics.csv  06_portfolios.csv  07_categories.csv  08_user_categories.csv  09_projects.csv  10_project_requirements.csv  11_matches_applications.csv  12_reviews.csv  roi_analysis.csv
docs/: OVERVIEW.md  TASKS.md
docs/layer1/: MECHANISM.md
docs/layer2/: MECHANISM.md
docs/research/: social-listening-findings.md
docs/superpowers/specs/: 2026-05-18-nextjs-frontend-plan.md  (+5 more)
docs/tasks/: DUC.md  DUY.md  MANH.md  SON.md  THANH.md  TRUNG.md
frontend/: Dockerfile  app.js  index.html  package.json  pnpm-lock.yaml  styles.css
frontend-next/: package-lock.json  package.json
pages/: 1_📊_Overview.py  2_🎬_Projects.py  3_🌟_Talent_Pool.py  4_🔗_Matching.py  5_💰_ROI_Analysis.py
utils/: data_loader.py  formatters.py
(+56 files in other folders)
