[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.2",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "requests>=2.32.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "langchain-xai",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

